## Version 1.1
###########################################################
- added new function glog, glog10, glog2, inv.glog, inv.glog10, inv.glog2 to
  compute the generalized logarithm and its inverse
- added new function melt.long to transform a data.frame form wide to long
  form
- added new functions to scale axes in ggplot2 plots by glog and neglog

###########################################################
## Version 1.0
###########################################################
- added a vignette

###########################################################
## Version 0.999
###########################################################
- added new function perfMeasures to compute various performance measures
  for binary classification
- added new function thyroid for plotting TSH, fT3, fT4
- removed upper bound n = 100 in modified wilson confidence interval
  (thanks to Andri Signorell for detecting this inconsistency)

###########################################################
## Version 0.998
###########################################################
- extended function normCI - now mean or sd can be known
- added print function for confidence intervals

###########################################################
## Version 0.997
###########################################################
- added function risks to compute RR, OR, etc.
- added function rrCI to compute an approximate confidence interval for the
  relative risk (RR).

###########################################################
## Version 0.996
###########################################################
- extended function or2rr
- added function normCI for computing confidence intervals for mean and sd
  of a normal distribution

###########################################################
## Version 0.995
###########################################################
- added function sIQR for computing standardized IQR

###########################################################