@@ -9,7 +9,7 @@ Author: Matthias Kohl [aut, cre] (0000-0001-9514-8910)
 Maintainer: Matthias Kohl <Matthias.Kohl@stamats.de>
 Depends: R(>= 2.14.0)
 Imports: stats, graphics, grDevices, RColorBrewer, robustbase, ggplot2, scales
-Suggests: gplots, Amelia, knitr, rmarkdown, exactRankTests
+Suggests: gplots, Amelia, knitr, rmarkdown, exactRankTests, foreach, parallel, doParallel
 VignetteBuilder: knitr
 Description: Contains several functions for statistical data analysis; e.g. for sample size and power calculations, computation of confidence intervals, and generation of similarity matrices.
 License: LGPL-3
