@@ -23,6 +23,7 @@ export(simCorVars,
        scale_x_neglog10,
        scale_y_neglog2,
        scale_x_neglog2,
+       optCutoff,
        melt.long,
        mi.t.test,
        ssize.pcc,
